# test-chest

./: .coveragerc  ChangeLog  Dockerfile  Dockerfile.static  Dockerfile.web  README.md  docker-compose.yml  pytest.ini  requirements.txt  setup.cfg  tox.ini
files/: nginx.conf  run_server_dev.py  run_server_dev.sh  traefik.toml
files/supervisor/: supervisord.conf
files/supervisor/conf.d/: test-chest.conf
test_chest/: admin.py  apps.py  models.py  serializers.py  views.py
test_chest/migrations/: 0001_initial.py
test_chest/tests/: test_models.py  test_views.py
test_chest/tests/test_views/: test_junit_upload.py  test_tag.py  test_testcase.py  test_testsuite.py
test_chest_project/: manage.py
test_chest_project/test_chest_project/: urls.py  wsgi.py
test_chest_project/test_chest_project/settings/: base.py  dev.py  prod.py  test.py
tests/files/: junit-1.xml
