[metadata]
name = test-chest
author = Christian Boelsen
author-email = christianboelsen+github@gmail.com
summary = A simple web server for storing test results..
description-file = README.md
home-page = https://github.com/cryporchild/test-chest
license = LGPLv3
keywords = django, junit, tests
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    test_chest_project
    test_chest

[entry_points]
console_scripts =
    test-chest = test_chest_project.manage:use_local_settings

[wheel]
universal = 1
